--- a/pages/about.html
+++ b/pages/about.html
@@ -82,6 +82,11 @@
 <td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/8b/8b543d88e1d179d26a86331e2387b0ca8b7a1c18.jpg" />大团锦鲤鱼</td>
 <td align="center">辅助</td>
 </tr>
+<tr>
+<td align="center">136278269</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/fc/fca1c0a787cef0ff8792249afb1cca1985b80c7d.jpg" />滨海小龙虾</td>
+<td align="center">SOLO 辅助</td>
+</tr>
 </tbody>
 </table>
   </div>
